# rustSQL

./: Cargo.toml  README.md
src/: error.rs
src/sql/: schema.rs
src/sql/engine/: kv.rs  mod.rs
src/sql/executor/: agg.rs  join.rs  mod.rs  mutation.rs  query.rs  schema.rs
src/sql/parser/: ast.rs  lexer.rs  mod.rs
src/sql/plan/: mod.rs  planner.rs
src/sql/types/: mod.rs
src/storage/: disk.rs  engine.rs  keycode.rs  memory.rs  mod.rs  mvcc.rs
