[package]
name = "sqldb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.15"
fs4 = "0.8.4"
tempfile = "3.12.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
bytes = "1.0.0"
rustyline = "15.0.0"
